# gpuproxy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.MD  diesel.toml  rustfmt.toml  task.db  up2ftp.sh
c2proxy-go/: client.go  go.mod  go.sum  proxy_gen.go
c2proxy-go/example/: main.go
entity/: Cargo.toml
entity/src/: common.rs  lib.rs  resource_info.rs  tasks.rs  utils.rs  worker_info.rs  workers_state.rs
gpuproxy/: Cargo.toml
gpuproxy-go/: client.go  go.mod  go.sum  proxy_gen.go
gpuproxy-go/api_gen/: proxygen.go
gpuproxy-go/example/: 2KiB.json  8MiB.json  main.go
gpuproxy/src/: lib.rs
gpuproxy/src/cli/: mod.rs  params_fetch_cli.rs  tasks.rs  utils.rs  worker.rs  worker_states.rs
gpuproxy/src/cli/params_fetch/: mod.rs
gpuproxy/src/cluster_c2_plugin/: main.rs
gpuproxy/src/config/: mod.rs
gpuproxy/src/gpuproxy/: cli.rs  main.rs  params_fetch_cli.rs
gpuproxy/src/gpuproxy_worker/: main.rs
gpuproxy/src/http_server/: middleware.rs  mod.rs  response.rs  server.rs
gpuproxy/src/http_server/access_control/: cors.rs  hosts.rs  matcher.rs  mod.rs
gpuproxy/src/params_fetch/: mod.rs
gpuproxy/src/proof_rpc/: db_ops.rs  mod.rs  proof.rs  worker.rs
gpuproxy/src/proxy_rpc/: db_ops.rs  mod.rs  rpc.rs  worker.rs
gpuproxy/src/resource/: c2proxy_base64  mod.rs
gpuproxy/src/utils/: base64bytes.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220426_000001_create_table.rs  m20230111_000001_create_table.rs  m20230113_000001_create_table.rs  main.rs
migrations/2022-01-10-063856_task/: up.sql
src/: lib.rs  main.rs
src/c2proxy/: main.rs
src/c2proxy_worker/: main.rs
src/config/: mod.rs
src/gpuproxy/: cli.rs  main.rs
src/gpuproxy_worker/: main.rs
src/models/: migrations.rs  mod.rs  schema.rs
src/proof_rpc/: db_ops.rs  mod.rs  proof.rs  resource.rs  task_pool.rs  utils.rs  worker.rs
src/resource/: mod.rs
src/utils/: base64bytes.rs  mod.rs
