[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
num_enum = "0.5.6"
serde_repr = "0.1"
serde = { version = "1.0.133", features = ["derive"] }

[dependencies.sea-orm]
version ="0.10.5"
features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "sqlx-mysql",
]
default-features = false