[package]
name = "gpuproxy"
version = "0.1.0"
authors = ["hunjixin"]
edition = "2021"


[lib]
name = "gpuproxy"
path = "src/lib.rs"

[[bin]]
name = "gpuproxy"
path = "src/gpuproxy/main.rs"


[[bin]]
name = "gpuproxy_worker"
path = "src/gpuproxy_worker/main.rs"

[[bin]]
name = "cluster_c2_plugin"
path = "src/cluster_c2_plugin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

async-trait = "0.1.52"
storage-proofs-core = "11.0.2"
filecoin-proofs = "11.0.2"
filecoin-proofs-api = "11.0.0"
clap = { version = "3.0.4", features = ["derive", "env"] }
jsonrpsee = { version = "^0.8.0", features = ["full"] }
jsonrpsee-core = "0.9.0"
futures = "0.3.21"
log = { version = "0.4", features = ["std"] }
simplelog = "*"
forest_address = "0.3.2"
anyhow = "1.0.52"
serde_json = { version = "1.0" }
serde_repr = "0.1"
serde = "1.0.133"
chrono = "0.4.19"
base64 = "0.13.0"
bytes = "1.1.0"
uuid = { version = "0.8", features = ["v4", "v5"] }
scopeguard = "1.1.0"
tokio = { version = "1.8.0", features = ["full"] }
tabled = { version = "*", features = ["color"] }
tracing = "0.1"

# params fetch
flate2 = "1.0.22"
humansize = "1.1.1"
reqwest = {version = "0.11.9", features = ["blocking", "native-tls-vendored"]}
pbr = "1.0.4"
tar = "0.4.38"

# http server
futures-channel = "0.3.21"
futures-util = "0.3.21"
hyper = "0.14.17"
socket2 = "0.4.4"

[dependencies.sea-orm]
version ="0.6.0"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "sqlx-mysql",
]
default-features = false


[dependencies.fil_types]
version = "0.2"
features = ["json"]