[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-schema = { version = "^0.7.1", default-features = false, features = [ "migration" ] }
entity = { path = "../entity" }
log = { version = "0.4", features = ["std"] }

[dependencies.sea-orm]
version ="0.7.0"
features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "sqlx-mysql",
]
default-features = false