[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-schema = { version = "0.10.3", default-features = false}
sea-orm-migration = "0.10.5"
entity = { path = "../entity" }
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.23.0", features = ["full"] }

[dependencies.sea-orm]
version = "0.10.5"
features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "sqlx-mysql",
]
default-features = false