[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-schema = { version = "0.12.0-rc.2", default-features = false}
sea-orm-migration = "0.12.10"
entity = { path = "../entity" }
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.24.2", features = ["full"] }

[dependencies.sea-orm]
version = "0.12.10"
features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "sqlx-mysql",
]
default-features = false